# subscription-admin-

./: .gitignore
backend/: README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: audit.py  auth.py  customers.py  health.py  jobs.py  subscriptions.py  templates.py
backend/app/core/: config.py  security.py
backend/app/db/: migrations.py  session.py
backend/app/hermes/: adapter.py  parser.py
backend/app/models/: admin_user.py  audit.py  content_template.py  customer.py  job_metadata.py  operation_result.py  subscription.py
backend/app/schemas/: audit.py  auth.py  common.py  health.py  jobs.py  subscriptions.py
backend/app/services/: audit_service.py  auth_service.py  job_service.py  subscription_service.py  template_service.py
backend/tests/: test_auth.py  test_health_api.py  test_hermes_adapter.py  test_job_service.py  test_jobs_api.py  test_subscription_api.py  test_subscription_service.py
deploy/: README-zh.md  README.md  backup-sqlite.sh  hermes-admin-api.service  hermes-admin.nginx.conf
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  i18n.ts  schedule.ts  styles.css
frontend/src/api/: client.ts  types.ts
frontend/src/components/: FailureModal.tsx  StatusBadge.tsx  ToastHost.tsx
frontend/src/pages/: JobsPage.tsx
frontend/tests/: App.test.tsx  FailureModal.test.tsx  schedule.test.ts
