[project]
name = "hermes-admin-backend"
version = "0.1.0"
description = "FastAPI admin panel backend for Hermes cron jobs"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.0",
  "pydantic-settings>=2.4.0",
  "python-multipart>=0.0.9",
  "bcrypt>=4.0.1",
  "python-jose[cryptography]>=3.3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "httpx>=0.27.0",
  "ruff>=0.6.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
